<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="12">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/slate_gray"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewTanggal"
                android:layout_width="100dp"
                android:layout_height="98dp"
                app:cardBackgroundColor="#DADADA"
                android:layout_weight="1"
                app:cardCornerRadius="15dp">

                <TextView
                    android:id="@+id/tvTanggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/tanggal"
                    android:textColor="@color/black" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvTipe"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_toRightOf="@id/cardViewTanggal"
                android:text="@string/tipe"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvKategori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:layout_below="@id/tvTipe"
                android:textStyle="bold"
                android:layout_toRightOf="@id/cardViewTanggal"
                android:text="@string/kategori"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvJumlah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvKategori"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:layout_marginTop="7dp"
                android:layout_toRightOf="@id/cardViewTanggal"
                android:layout_weight="1"
                android:text="@string/jumlah"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvJudul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="7dp"
                android:layout_below="@id/tvJumlah"
                android:textStyle="bold"
                android:layout_toRightOf="@id/cardViewTanggal"
                android:text="@string/deskripsi"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/btnUpdate"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:backgroundTint="@color/soft_green"
                android:drawableLeft="@drawable/ic_baseline_edit_24"
                android:text="edit"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnUpdate"
                android:layout_alignEnd="@id/btnUpdate"
                android:layout_weight="1"
                android:backgroundTint="@color/soft_green"
                android:drawableLeft="@drawable/ic_baseline_delete_outline_24"
                android:text="Delete"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>