<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/faded"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/judul"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/motto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/judul"
            android:layout_centerHorizontal="true"
            android:text="@string/motto"
            android:textColor="@color/white"
            android:textFontWeight="1"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/Username"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/judul"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="55dp"
            android:layout_marginRight="16dp"
            android:text="@string/username"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyUserName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Username"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="#30ffffff"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:keyboardNavigationCluster="false"
            android:lines="1"
            android:textColorHint="@color/soft_gray"
            android:typeface="serif"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/white"
            app:helperText="Required*"
            app:helperTextTextColor="@color/white"
            app:startIconDrawable="@drawable/ic_baseline_person_outline_24"
            app:startIconTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lyUserName"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="9dp"
            android:layout_marginRight="16dp"
            android:text="@string/password"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#30ffffff"
            android:hint="@string/password"
            android:lines="1"
            android:textColorHint="@color/soft_gray"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/white"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            app:helperText="Required*"
            app:helperTextTextColor="@color/white"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pwlayout"
            android:layout_centerInParent="true"
            android:layout_marginTop="27dp"
            android:backgroundTint="@color/teal_700"
            android:gravity="center"
            android:text="@string/log_in"
            android:textSize="16sp" />

        <Button
            android:id="@+id/Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Login"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/teal_700"
            android:gravity="center"
            android:text="SignUp"
            android:textSize="16sp" />

    </RelativeLayout>

</ScrollView>