<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerActivity"
    android:background="@drawable/pinkie">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/motto"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center"
            android:text="@string/judul"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/motto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/aturUsername"
            android:layout_centerHorizontal="true"
            android:text="@string/motto"
            android:textColor="@color/black"
            android:textFontWeight="1"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/aturUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:text="Username"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/motto" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newUsernameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/aturUsername"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="#30ffffff"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:keyboardNavigationCluster="false"
            android:lines="1"
            android:textColorHint="@color/black"
            android:typeface="serif"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/black"
            app:helperText="Required*"
            app:helperTextTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_person_outline_24"
            app:startIconTint="@color/black"
            tools:ignore="SpeakableTextPresentCheck">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:background="#40000000"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:maxLength="20"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/aturPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="9dp"
            android:text="Password"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newUsernameLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPWlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/aturPassword"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/password"
            android:lines="1"
            android:textColorHint="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:counterTextColor="@color/black"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:helperText="Required*"
            app:helperTextTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/black"
            tools:ignore="SpeakableTextPresentCheck">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserPassword"
                app:layout_constraintTop_toBottomOf="@id/aturPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#40000000"
                android:textColor="@color/black"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:textColor="@color/white"
            android:text="Sign Up"
            app:layout_constraintStart_toEndOf="@id/btnCancelSet"
            app:layout_constraintTop_toBottomOf="@id/newPWlayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnCancelSet"
            android:textColor="@color/white"
            android:text="Log In"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newPWlayout"
            app:layout_constraintEnd_toStartOf="@id/btnSignUp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>